@@ -1,3 +1,8 @@
+* 2014-03-07 - marcus.klein@open-xchange.com
+
+ - Fix for bug 31405: Implementation of move context now uses existing functionality to update context to database mapping that takes care
+   about MySQL master/slave setups.
+
 * 2014-03-06 - marcus.klein@open-xchange.com
 
  - Fix for bug 29980: Use row locks on table configdb.context_server2db_pool to prevent a delete context call to remove the schema a create
